@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST spy-0.4.1.gem 32768 SHA256 cd93acce16e546cd6a7d6a19cd03991e5654b5b7e2a1cde142cec37332a558e5 SHA512 37c6c2892ce28e9512661bbf6fae8d76214e6cd4610c27c1a62dba48e6744dbcf1eb499db6f8c2e1873db4eb677e5f974e9f7c24ae32f6408d7e7f53bee1185d WHIRLPOOL ab2b546910f99d4e8afccee73a37ebbd9d4a421497fca5501c7fa77003d680ede9d6a3c6b5e6b0394f9bce00c9f9fac5b1c8f79814e295ee02fe0173470d6e11
+DIST spy-0.4.2.gem 32768 SHA256 6d53785192bf5628a566d6547eed2b78e58d791c9b897996306183c924fa96c3 SHA512 0c5dd93857c09b55b8e6f6fa8468deadcaf4bd0c5dbddcadb466eba1552996730a57e9e71eb91871dcdde64692b0fec2d683a1e88811cfada8495c5b03f78a8f WHIRLPOOL e27a35ed8192c16440b8f645133d917a542fc914c264f2c177a60ea0c0fd3b71a36060e65dd041d23b786397500c0b7d4f5ad36cb1992305923ed9733bde5f2b
 EBUILD spy-0.4.1.ebuild 691 SHA256 56cb8eeadda97bac181419b3a122da7ed2090bd5a12a7ab87694bfeaa2a1423e SHA512 9f667a9c2422c0c39069b7b19432f6b7434223f657be0d9131c5c4bd10567437a9056fb83f7909a0994cd81e5d5fe963ea93cbed6d22e142a7b37775e084c395 WHIRLPOOL c2e3fe4c7cf84f6e507e384851dd8b10ea916cc5f56f878925f5647a1bef4faf11c9a5fbb62f6aca7c4c5af64e8e7d1ea54e8fe3866540b3174e886e11ef44b1
-MISC ChangeLog 354 SHA256 08123fcec983473ed0d674aa53418b817fc00b9a3fb333d168016b00a5d37e62 SHA512 02788fde50585491ee2b96f000122833a18d7029e510858eaed49755423f969900e3f880a86bc89e6b3b5703e99d2647f5c96a9f877a68c6278debef49d09d6e WHIRLPOOL d5fb6bfe07552e005ee1c27595770a9f468796f3e0d0ca602930c40991796ef74c96d2f49187263c4af4443548c9f0ff618c5944dfd2ef56bc2acf80adc108ab
+EBUILD spy-0.4.2.ebuild 692 SHA256 ad0ab88a18cbb65d3a6156826f5ea41329ff1e51b76dbe181bca679fe940da16 SHA512 113507f792531ca0827eeb27418ebe6319a5dfae9d56e17890e049f3af6058a8b8bb9b600c665fb21ba5ad3a7efe09ba9caec8d03f157eddec47681748ededf0 WHIRLPOOL cfb4f95e19e5b154537811e6e0455f1ca3c11dd75db60e1b939c6a65c1e0d576a17f5d12ef1001f3100f5906fabe0299a772ef46e31bd0717845f7f7e6bcd034
+MISC ChangeLog 467 SHA256 45a029da9ddc3c8233d9db0aafea502d19af74a938fb0b608116fd54af160f33 SHA512 7f9ad06848348c6191d740d9dda0b1e995db528502530f27e74f83cc06e828b891402ab5557d828167bf973053f36dd405cb4dd84871e52e5e4efa1149bf0e99 WHIRLPOOL 0f1d94735bdaefb5ad66f8343485b92d70d9fd0d5e135f190968d062f3fee7bdf12bd48bb23145cf0b1bd43c4928d3b001d7019d7389cd54402c8bf350a45669
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlVS2HIACgkQiIP6VqMIqNeebgD+OwvdMYa1/pyOf4bH9HizSuUg
+NHjQYano0JKUxl9Vf3ABAIGG+FTGcwjgdmtUS+xAPMHE3n7466c4eOdbFmijmEK8
+=Nlmz
+-----END PGP SIGNATURE-----
