@@ -1,29 +1,27 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST tortoisehg-3.2.2.tar.gz 8212311 SHA256 ce3c9a3cd44ae071b6d44c68fd2fa78858f11dddaeef688cc4e7cb4a4fdf81a0 SHA512 9dd2c398467afea507376255125d916af36e94943678410232c5f100c7b3a56f37f89076baa2b824cdee12d4792144ff5ecba1493d28f10f23377322f0f628d1 WHIRLPOOL f0ecdc78b795e1d19b8c8321a1c8606ff0058ae56915fea6ba93c4f1e2893a69dd217f70562db922b5b68f3a3d965067f88b4a0b7e5f853245934f4fb9c88abd
 DIST tortoisehg-3.3.2.tar.gz 8226128 SHA256 779beb06588897d1c42fc463fecc4b61498f7cac76681fe1c1f017ecd811719a SHA512 4b7e1422731507aa8947b0e8e7746a6daa004186833db200122927c4e5a2f2cb1fbbf12f89089e3ee82d1a22fdb3c7745465188cbf3e14d73d831b953f2b2d9f WHIRLPOOL 34fce6c6383ae94eb4d6fbca854068535ac39b50746dbcc3ee9460976231dc68c3c5f824dc31082838505bdaeaf3620306ceea867d8ac5571d00ee1f1192e867
 DIST tortoisehg-3.3.3.tar.gz 8230380 SHA256 a22ec794b0152b25b085447a253594dde27f71863149b9471ec70669687fb47f SHA512 ed15a2ce76647f6c2d9df2daebc62f983eec6a27ea15a808060d83968cfee2c22f643b2ed6fb48bf06dd5d7cb9f4178e756e539eec2ca43e74fe4c8cfc7da4cf WHIRLPOOL d069dbe4ca109aaf2ebf9dd73f2d87343c2c71a8d5a894a5b7278a5edc878aa7eda56f9d53dca8968d1e730eea94a9f814a5cd76fb4af522a506753a5342cb47
-EBUILD tortoisehg-3.2.2.ebuild 1926 SHA256 4f54ba6d9ff0afaf0c0ca935e4947692809da3bbadfe41542765979565048eb0 SHA512 c3c1efc7cdbc61fc31b5d8791f313cbeb52043037ee37ab3e2f27ea57c3b2057f1bdd45b89d47679244fdd83eef53422ca172e88ffae41c5384a3d818cf8757f WHIRLPOOL 89cf49d6b39ed670ea57a01f55987fe74b8b9bf866bee46477eb3b8fe12624a09ff30dfd989574b6d3c12953e88c16280ffebfdf59045e80d9aa38fff76fa110
-EBUILD tortoisehg-3.3.2.ebuild 1928 SHA256 a9b6b35a03f50c114cfac4397f743a7f074d6df30ec963396cca2f9eb7c73a61 SHA512 17f6ac5a324576d993ee15476610b451e5040fa90469d292f027b70ac6fdd295ff3f6cae1c2e134e79a75db067af830e2f1f6c9c5b99c0aee324afe0b3ceeb82 WHIRLPOOL 71c497a2955065c01e74fc2c0c139ef2ed581639d1842b51e37b5ea4e0a8b4c045d55c4c55c9ee188d34c45f0d7d360b7acf51e6c04b381581b2102510958577
+EBUILD tortoisehg-3.3.2.ebuild 1932 SHA256 b976e18c5a126636d48f9d6e2a5c4c8899531f9691d07f1ea309ae24d64a135f SHA512 598dbf9cc42fc4f580f18ec8533fa930a8e49b1ae088c66ee1bd449077aa1f624b868d6833b82b5a9a558607a2736b7a9217eaadaedc62b6585e212eded99e89 WHIRLPOOL 4443e8b741f5055ebbe5e70da295742245fa22083100b2c584090315b3f4893d41ba26736093821f4a042b698d62866357a58034248278ec4836ad83db57aa6d
 EBUILD tortoisehg-3.3.3.ebuild 1934 SHA256 07cdb59f85ebe82c94dd1d283e5498306a43d24566dc830ee542ede9bbb4731b SHA512 9b7e17ca79fa1fe43a116f52fbf047ea3a92b33ba757ecae63d1124dc94c115b1f9129cef540dfff45dca57fca4023b19d5222d2cc732941c5586a47e858061b WHIRLPOOL c90706bcc373874ac8e86e619a28338dde4645bb1d60a10e44fbe4c50410bd8eff08c15460f288595666ad0218437bc4f6a320730bd45e20ead5d09e4724450f
 EBUILD tortoisehg-9999.ebuild 1930 SHA256 40c98b08ff07bec3c84a30ba2448c2a683f5e2d6eb7a19468a61a301ece6eb55 SHA512 82740dd2c20256fdea850890b2ac4a63bfbd1f6d0eb44659d5b45fab645731156d00b03febed7642931972ea383d4e58c4749df8e3e20380dda8e5d726f5998b WHIRLPOOL f0edb077d8c3fb91e6e910189dd0c512619effbd81376b8486cd04e0d9f0c4c450560085b143f3990d2efc3e88ad043a0a402242878d525549ba6d3617108b5d
-MISC ChangeLog 12560 SHA256 c79d0d42b8a14f9d5e694d81bedb0c2e3ffddc91d76566f54f166659b398c0a6 SHA512 af3e3b9cbe968b448857293325144cefbea72d5ddd02f33819c8898071df6738efbb2856f9809bbca80b6bfdc6f4736a78be4ff227473dd41ad398f7e342875f WHIRLPOOL 2d7957661f552211d69c2127eccc586a4568e883cca42b0cea97fabb9c56e52bc10639a5184c700c818edb91604aac181cbf48d9f8e1162f87a29664b2327109
+MISC ChangeLog 12765 SHA256 d59c9f83f0ab14a2cbda053c868f9700a040285767cbacca33607151ca5335c3 SHA512 48813dd444132fc088aa136d96655887193ca2ee45408404e6caeccfb440d502656ace628d37611091ef2c5d2593131714d24c400050b23a3bf0851895734a69 WHIRLPOOL c99b6c80e2aadc2f845ee16bd01352779de2b412108aa71742a6a85f79eadef5eac59cb2ab571f2b9ddc4c2db83214017cff55bd22d4d82eba55cf27f2659b03
 MISC metadata.xml 330 SHA256 3a426c0792eb862bd697f0e6a2afb37621a1a5ea3a5ef4ddaaf748bb94e9eda0 SHA512 83d0c23820847cac4ca7e298392581051ac4fe45c88ee36b23ee20634f62e38b3a6a6c7df17952cf685213fb8755e358a6f7b602ac46aaebbdec8e71bbcbaedf WHIRLPOOL 53b2b3929cdd21719c8389cca2fe646b6549608ae0fa381ac1a228175c4aef7295acc6b1da4ebe5c9f11c91f6e0a5343b0268993afbbc5a2e5348617b740baf2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVL3cmAAoJEPiazRVxLXTFOX0P/1usaqID2v7973pD2Xmjwsj0
-vqtd5SpYq/fSoyOQWQLeYs3olDajSLPcAPexFJPU4KaPaVitnNxIfZ+egvuYlHwq
-gFB1fesb/BPhVmbc4FX2eiiPpkJ8bnhB30M9N4nH2G8xNGAtzIurVPVLtmWffQJo
-26Fgm7pL+Ick/ohhdNmaY6RwFfjGBHzdWG8OAz5kqKosfvb9VnqMfeEms/2XOW54
-pmjSjGRce/1dd6cUk56ELU2bCnElTZTOr0cdMvWbjKSIwOCTn5QPy0dkALcLPOrt
-EOs93vfoTDOTbU2Q3tWxjotOTGpc07GjLctkpQDJaJO4YM1Wzq6rNQUkSXvuc9UC
-TBLMFIbybCl5lBzGBUc3zRxHaEUaMCHeqw2jVz854rQwN8odgNz6fz09URlSsVjr
-QgXFgwgT6s8VNelExvcBSu+F9B8FFfMkA1FykbXdA1gQPJVcTfBtqdEwPCCshZgb
-7byIoRqI/M3rKHzLIXnB9ph7bp4YKVf6nxAAQgtISKf1bNoM37ry149CQ57bDwXb
-lfBb6K/mbIKA+yHGOxJCafUKcP6flpntI1nP5Dt+/VItBk4X5jS8dFiDSGA9eRAg
-4rYEDDO8HPvD5jyF44ZQoL/7q1d06ELDQs9+OMuNsS16BkCeulKT1uznhgXsHQvB
-dKbUzE+Y4vQ4DZ0n1P1a
-=X6u4
+iQIcBAEBCAAGBQJVUtihAAoJEPiazRVxLXTFWIYP/i5VA9lbvI60tm3/r39HVe7u
+qcqklt2lD1b+OkTPoShW5aCSpK8fWS6GVROEMxognGOT+NRREyggFnOGEakFiMfd
+Slk033WMyH/nTEkMj18nLgD4MKut80QvP07zpO19NeqFsuCXTsNEXR19fQv64dP/
+L++EyyEdkXYgnjTUMLeXtd18HIVjAf7cIcrnKZtiiAjBr7kpH8wKE0b03PQDgy+f
+DiKD+Avdz5INYl0tN32DTp91yxZi3ud3c4CXXfYKxdZqw1VkyK9Gok3Hm4IyEw3g
+qcEMmhTNi07UlE+Q3mb2Y3ZQY40AjRX+q0iaFhn5hybNgtS/CheSWh0iH0eLgWQM
+dQvha6NIfK/QdTwZMR4fsxpjD7QIjF8voDz7HBLqNpOsoyd/B7PIYVTWhplikDAg
+MA00g4QThYIXAZkcWyYIGZ4Nqu+bsV68E0LcKWmnBZP36vTWsoYRS3CCcCzkaoTS
+vnf192tM4envzbYj9VV5iZgBwoWJPAOyRK1nK79XTi6IRlMz52HrMCRHUoWr/uF0
+rf2SZFP3oHl5AtHgDz0lMqnDgRXOhuX4XktidEB1ftS2iKshhf3VBK4A7AqA+o/9
+x2E4jn9+wM8QZ+ynlxZGMizSdNBUAsnpmzPDZq9nVv+Jx2Jv+t4YhZJOz/xhj5Na
+9KyT9pkosSbsnjQ7tz6K
+=J/Lr
 -----END PGP SIGNATURE-----
