@@ -4,11 +4,11 @@ DESCRIPTION=Set of graphical tools for Mercurial
 EAPI=5
 HOMEPAGE=http://tortoisehg.bitbucket.org
 IUSE=doc python_targets_python2_7
-KEYWORDS=~amd64 ~x86
+KEYWORDS=amd64 x86
 LICENSE=GPL-2
 RDEPEND=>=dev-vcs/mercurial-3.2 <dev-vcs/mercurial-3.4 dev-python/iniparse[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/pygments[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/PyQt4[svg,python_targets_python2_7(-)?,-python_single_target_python2_7(-)] dev-python/qscintilla-python[python_targets_python2_7(-)?,-python_single_target_python2_7(-)] python_targets_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7 ) >=dev-lang/python-exec-2:=[python_targets_python2_7(-)?,-python_single_target_python2_7(-)]
 REQUIRED_USE=|| ( python_targets_python2_7 )
 SLOT=0
 SRC_URI=https://www.bitbucket.org/tortoisehg/targz/downloads/tortoisehg-3.3.2.tar.gz
 _eclasses_=distutils-r1	c01d5c4af34f4a37a51fc9638299c222	eutils	9fb270e417e0e83d64ca52586c4a79de	multibuild	6d4858dc00f8bc51caf3f957f8430eb0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	python-r1	6d3a3cb5705b9fff1aeb7cfa4e3336fe	python-utils-r1	096f8247eae93026af13ab88cf4305cd	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
-_md5_=7d85737ee9a09f3bb2f14100fd2b2eaa
+_md5_=d55748cfa44ad8c9c3844f323ae006c5
