@@ -1,6 +1,11 @@
 # ChangeLog for dev-vcs/tortoisehg
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/tortoisehg/ChangeLog,v 1.75 2015/04/16 08:47:33 polynomial-c Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/tortoisehg/ChangeLog,v 1.76 2015/05/13 04:52:48 polynomial-c Exp $
+
+  13 May 2015; Lars Wendler <polynomial-c@gentoo.org> -tortoisehg-3.2.2.ebuild,
+  tortoisehg-3.3.2.ebuild:
+  Stabilized new version because of security cleanup for mercurial (bug
+  #549312). Removed old.
 
 *tortoisehg-3.3.3 (16 Apr 2015)
 
